fix: missing breadcrumbs when passwords don't match